--- a/dx/force-app/main/default/aura/ltng_DependentPicklistDemoSetup/ltng_DependentPicklistDemoSetup.cmp
+++ b/dx/force-app/main/default/aura/ltng_DependentPicklistDemoSetup/ltng_DependentPicklistDemoSetup.cmp
@@ -33,7 +33,7 @@
                             (assign permission sets and create default objects).
                         </p>
                         <div class='slds-text-heading_small slds-p-top_small'>Note - Please complete this small manual step</div>
-                        <p><a onclick='{! c.handlePermissionSetOpen }'>Add the 'Expanded' and 'Minimum' record types to the PermissionSet.</a></p>
+                        <p><a onclick='{! c.handlePermissionSetOpen }'>Add the 'Master', 'Type A' and 'Type B' record types to the PermissionSet.</a></p>
                         <p>We are working to correct this issue.
                             See <a href='https://github.com/SalesforceCloudServices/ltng-support-url-hack#add-the-missing-permissions-on-the-permission-set'>the installation steps</a> for more information - if desired.
                         </p>
